# yandex-wordstat-historical-parser

./: .env.sample  .gitmodules  Dockerfile  README.md  cosmetics_19k_sample.csv  docker-compose.redis.yml  docker-compose.yml  dudos.py  empty_queue.py  main.py  pyproject.toml  requirements.txt
browsermob-proxy-2.1.4/: Dockerfile
yandex_parser/: parser.py  worker.py
