[tool.poetry]
name = "yandex-wordstat-historical-parser"
version = "0.1.337"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU GPL v3"
readme = "README.md"
packages = [{include = "yandex_wordstat_historical_parser"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
js2py = "^0.74"
selenium = "^4.6.0"
pandas = "^1.5.2"
numpy = "^1.23.5"
2captcha-python = "^1.1.3"
redis = "^4.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
